WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76741
De-zippering incorrectly snaps to target gain
https://bugs.webkit.org/show_bug.cgi?id=76741
Summary
De-zippering incorrectly snaps to target gain
Chris Rogers
Reported
2012-01-20 14:33:22 PST
De-zippering incorrectly snaps to target gain
Attachments
Patch
(1.14 KB, patch)
2012-01-20 14:34 PST
,
Chris Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2012-01-20 14:34:23 PST
Created
attachment 123382
[details]
Patch
Chris Rogers
Comment 2
2012-01-20 14:37:40 PST
I noticed this problem when I heard zipper noise cause by distance gain changes in the simple panning demo:
http://chromium.googlecode.com/svn/trunk/samples/audio/simple.html
Raymond Toy
Comment 3
2012-01-20 14:59:03 PST
LGTM. Unfortunate that we missed that in the original review.
Kenneth Russell
Comment 4
2012-01-20 15:35:55 PST
Comment on
attachment 123382
[details]
Patch Looks fine. r=me
WebKit Review Bot
Comment 5
2012-01-20 18:34:24 PST
Comment on
attachment 123382
[details]
Patch Clearing flags on attachment: 123382 Committed
r105562
: <
http://trac.webkit.org/changeset/105562
>
WebKit Review Bot
Comment 6
2012-01-20 18:34:29 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug