De-zippering incorrectly snaps to target gain https://bugs.webkit.org/show_bug.cgi?id=76741

Reviewed by Kenneth Russell.

* platform/audio/AudioBus.cpp:


git-svn-id: svn://svn.chromium.org/blink/trunk@105562 bbb929c8-8fbe-4397-9dbb-9b2b20218538