third_party/WebKit/Source/WebCore/platform/audio/AudioBus.cpp
@@ -247,7 +247,8 @@ void AudioBus::sumFrom(const AudioBus &sourceBus)
         OP \
         GAIN_DEZIPPER \
     } \
-    gain = totalDesiredGain; \
+    if (!framesToDezipper) \
+        gain = totalDesiredGain; \
     OP##_V 
 
 #define STEREO_SUM \
